@@ -28,18 +28,14 @@ my ($q, $r, $c);
 
 
 subtest 'ResultSummary' => sub {
-	plan tests => 13;
+	plan tests => 11;
 	$q = <<END;
 RETURN {num}
 END
 	my @params = (num => 42);
 	lives_ok { $r = $t->run($q, @params)->summary; } 'get summary';
 	isa_ok $r, 'Neo4j::Driver::ResultSummary', 'ResultSummary';
-	lives_and { my $a = $r->server->address; like(Neo4j::Test->server_address, qr/$a/) } 'server address';
-	my $neo4j_version;
-	lives_ok { $neo4j_version = $r->server->version } 'get server version';
-	like $neo4j_version, qr(^Neo4j/\d+\.\d+\.\d), 'server version syntax';
-	diag $neo4j_version if $ENV{AUTHOR_TESTING};  # give feedback about which Neo4j version is being tested
+	throws_ok { $r->server; } qr/\bunimplemented\b/i, 'server address';
 	lives_and { is $r->statement->{text}, $q } 'statement text';
 	lives_and { is_deeply $r->statement->{parameters}, {@params} } 'statement params';
 	lives_and { ok ! $r->plan; } 'no plan';
