@@ -56,7 +56,7 @@ END
 
 
 subtest 'error handling' => sub {
-	plan tests => 6;
+	plan tests => 5;
 	throws_ok { $s->run('iced manifolds.'); } qr/syntax/i, 'cypher syntax error';
 	my $q = 'RETURN 42';
 	throws_ok { $s->run(\$q) } qr/\bunblessed reference\b/, 'bogus reference query';
@@ -68,11 +68,6 @@ subtest 'error handling' => sub {
 		Neo4j::Driver->new('http://none.invalid')->session->begin_transaction->run;
 		# gives a 500 response with text/plain body that is generated by LWP
 	} 'no connection';
-	
-	# this really just tests Neo4j::Driver
-	throws_ok {
-		Neo4j::Test->driver_maybe->basic_auth('nobody', '')->session->begin_transaction->run;
-	} qr/\b401\b/, 'HTTP 401';
 };
 
 
